--- a/electron-new-rpc/package.json
+++ b/electron-new-rpc/package.json
@@ -42,7 +42,9 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@bitauth/libauth": "^1.17.1"
+    "@bitauth/libauth": "^1.17.1",
+    "events": "^3.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
