--- a/electron-new-rpc/package.json
+++ b/electron-new-rpc/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
+    "@types/uuid": "^8.3.0",
     "events": "^3.2.0",
     "uuid": "^8.3.2"
   },
